# precinct

./: .env.example  .env.production.example  .gitignore  CAMPAIGN_MESSAGE_TOOLKIT.md  CLEAN_UNUSED.md  CLUSTERING_INTEGRATION_RECOMMENDATION.md  DASH_README.md  DIGITAL_OCEAN_DEPLOYMENT_PLAN.md  DVA_ANALYSIS_PROGRESS_SUMMARY.md  DVA_FINAL_CONTEXT_UPDATE.md  DVA_PROGRESS_UPDATE_20251021.md  FUTURE_ELECTION_STRATEGY.md  MAINTENANCE_MODE.md  MESSAGING_SYSTEM_PROGRESS.md  MIGRATION_GUIDE.md  PROJECT_PROGRESS.md  PROJECT_PROGRESS_SUMMARY.md  README.md  SECURITY.md  UNUSED_PY.md  ab_message_tester.py  ab_results_tracker.py  add_candidate_names_to_flippable.py  add_custom_leaflet_zoom.py  add_is_county_column.py  add_message_listener.py  add_newtab_zoom_controls.py  add_zoom_buttons.py  analyze_governor_data.py  app.py  campaign_workflow.py  census_tract_clustering.py  census_tract_clustering_results.csv  check_narrow_margins.py  cleanup_temp_tables.py  climate_styles_test.json  clustering_analysis.py  clustering_analysis_backup_20251022_215411.py  comprehensive_flippable_analysis.py  config.py  (+76 more)
Canvass_Optimization/: CENSUS_TRACT.md  Canvass Optimization.code-workspace  ForsythPrecinctsCensusIntersection.md  census_config.ini  census_data_importer.py  forsyth_precinct_704_map.html  forsyth_precincts_census_intersection.html  main.py  requirements.txt  setup_census_import.sh  simple_census_processor.py
app_administration/: 2025_Forsyth_Municipal_Analysis_20251025.md  BACKUP_RESTORE_GUIDE.md  CANDIDATE_DATA_UPDATES.md  MAPS_BACKUP_GUIDE.md  README.md  TEST_USER_GENERATION.md  add_constraint_maps.sql  add_municipal_to_flippable.py  backup_maps.py  backup_users.py  check_test_users.py  cleanup_test_users.py  create_ix_maps_precinct.sql  create_maps.sql  create_table_maps.sql  create_test_users.py  daily_candidate_check.sh  daily_election_check.sh  dump_nc_database.sh  fix_clustering_quick.py  fix_clustering_zero_padding.py  generate_ballot_matching_analysis.py  generate_candidate_report.py  load_maps.py  load_maps.sql  parse_ncsbe_elections.py  restore_maps.py  restore_users.py  set_sequence.sql  update_candidate_data.py  users_backup_20251013_205014.json
candidate_reports/: README.md
demseverywhere/: app.db
doc/: .env.example  APPLICATION_README.md  CENSUS_TRACT_CLUSTERING_SUMMARY.md  CLAUDE_INTEGRATION_PLAN.md  COMPLETE_DASH_REPLACEMENT_GUIDE.md  COUNTY_FILTERING_SUMMARY.md  Candidate_Listing_2020.csv  Candidate_Listing_2021.csv  Candidate_Listing_2022.csv  Candidate_Listing_2023.csv  Candidate_Listing_2024.csv  Candidate_Listing_2025.csv  DIGITAL_OCEAN_DEPLOYMENT.md  DVA_QUICK_REFERENCE.md  DVA_VS_VOTE_GAP_ANALYSIS.md  FLASK_LIMITER_IMPLEMENTATION.md  GIT_LFS_HELP.md  NC_DATABASE_IMPLEMENTATION_SUMMARY.md  PRECINCT_CLUSTERING_SUMMARY.md  README.md  REPLACE_DASH_ANALYTICS_WITH_FLASK.md  SECURITY.md  SESSION_SUMMARY_MIGRATION_AND_CONFIG.md  SINGLE_DATABASE_ARCHITECTURE.md  (+28 more)
(+180 files in other folders)
